Making code responsive

--- a/www/styles/index.css
+++ b/www/styles/index.css
@@ -335,3 +335,142 @@ a.nav-item:hover {
 #contact-email-phone p {
     margin-bottom: 8px;
 }
+
+/* Media Queries */
+
+@media screen and (max-width: 415px) {
+    #nav-bar {
+        display: none;
+    }
+
+    .section {
+        min-height: 100vh;
+        width: 100%;
+    }
+
+    #brand-info-container {
+        display: flex;
+        flex-direction: column;
+        padding: 8px;
+        height: auto;
+        width: 80%;
+    }
+
+    #brand-info-text {
+        padding: 0;
+    }
+
+    #brand-info {
+        order: 2;
+    }
+
+    #brand-info-illustration {
+        order: 1;
+    }
+
+    #why {
+        display: initial;
+    }
+
+    #contact {
+        display: initial;
+    }
+
+    #services {
+        display: initial;
+    }
+
+    #service-item-container {
+        display: flex;
+        flex-direction: column;
+        height: initial;
+        margin-bottom: 4rem;
+    }
+
+    #contact-container {
+        display: flex;
+        flex-direction: column;
+        padding: 0 2rem;
+    }
+
+    #contact-info {
+        order: 1;
+    }
+
+    #map {
+        order: 2;
+    }
+
+    #map iframe {
+        height: 200px;
+    }
+
+    #contact .section-title {
+        padding: 0 1rem;
+    }
+
+    #why-items-container {
+        display: flex;
+        flex-direction: column;
+        padding: 0 1rem;
+        row-gap: 16px;
+        margin-bottom: 4rem;
+    }
+}
+
+
+@media screen and (min-width: 415px) and (max-width: 770px) {
+    #brand-info-container {
+        width: 80%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+    }
+
+    #brand-info {
+        order: 2;
+    }
+
+    #brand-info-illustration {
+        order: 1;
+    }
+
+    #why-items-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (min-width: 415px) and (max-width: 1025px) and (orientation: portrait) {
+    #brand-info-container {
+        width: 80%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+    }
+
+    #brand-info {
+        order: 2;
+    }
+
+    #brand-info-illustration {
+        order: 1;
+    }
+
+    #why-items-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    #contact-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #contact-info {
+        order: 1;
+        margin-bottom: 2rem;
+    }
+
+    #map {
+        order: 2;
+    }
+}
